# PixelGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  imgui.ini
docs/: Programming Links.txt  dependencies.txt  functions.txt  material properites.txt
example/: enable_if.cpp
inc/: Coloursf.h  MeshData.h  Sources.h  Timer.h  graphics.h  m3d.h  resourceManager.h
include/: MeshData.h  application.h  frametimer.h  graphics.h  imageinterface.h  input.h  keycode.h  scancode.h  shader.h  texture.h  vec.h  window.h
shaders/: base.vs
src/: Application.cpp  application2.cpp  imgui_example.cpp  main.cpp
